2009-09-25	The InnoDB Team

	* include/os0file.h, os/os0file.c:
	Fix Bug#47055 unconditional exit(1) on ERROR_WORKING_SET_QUOTA
	1453 (0x5AD) for InnoDB backend

2009-09-19	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-consistent-master.opt,
	mysql-test/innodb-consistent.result,
	mysql-test/innodb-consistent.test:
	Fix Bug#37232 Innodb might get too many read locks for DML with
	repeatable-read

2009-09-19	The InnoDB Team

	* fsp/fsp0fsp.c:
	Fix Bug#31183 Tablespace full problems not reported in error log,
	error message unclear

2009-09-17	The InnoDB Team

	* mysql-test/innodb-zip.result, mysql-test/innodb-zip.test:
	Make the test pass with zlib 1.2.3.3. Apparently, the definition
	of compressBound() has changed between zlib versions, and the
	maximum record size of a table with 1K compressed page size has
	been reduced by one byte. This is an arbitrary test. In practical
	applications, for good write performance, the compressed page size
	should be chosen to be bigger than the absolute minimum.

2009-09-16	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#46256 drop table with unknown collation crashes innodb

2009-09-16	The InnoDB Team

	* dict/dict0dict.c, handler/ha_innodb.cc,
	mysql-test/innodb_bug44369.result, mysql-test/innodb_bug44369.test,
	row/row0mysql.c:
	Fix Bug#44369 InnoDB: Does not uniformly disallow disallowed column
	names

2009-09-16	The InnoDB Team

	* handler/ha_innodb.cc, include/db0err.h,
	mysql-test/innodb_bug46000.result, mysql-test/innodb_bug46000.test:
	Fix Bug#46000 using index called GEN_CLUST_INDEX crashes server

2009-09-02	The InnoDB Team

	* include/lock0lock.h, include/row0mysql.h, lock/lock0lock.c,
	row/row0mysql.c:
	Fix a regression introduced by the fix for MySQL bug#26316. We check
	whether a transaction holds any AUTOINC locks before we acquire
	the kernel mutex and release those locks.

2009-08-27	The InnoDB Team

	* dict/dict0dict.c, include/dict0dict.h,