@@ -1,3 +1,10 @@
+2009-09-28	The InnoDB Team
+
+	* fil/fil0fil.c:
+	Try to prevent the reuse of tablespace identifiers after InnoDB
+	has crashed during table creation.  Also, refuse to start if files
+	with duplicate tablespace identifiers are encountered.
+
 2009-09-25	The InnoDB Team
 
 	* include/os0file.h, os/os0file.c:
